# ESL_final_project

./: EE6470_Final_project.pptx  README.md  report_of_final_project.md
1core1pe/: Makefile  main  main.cpp
1core2pe/: Makefile  main  main.cpp  stimulus.txt
2core2pe/: Makefile  main  main.cpp
basic-acc-1core/: CMakeLists.txt  SobelFilter.h  filter_def.h
basic-acc-2core/: CMakeLists.txt  SobelFilter.h  main.cpp
